--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,7 +24,7 @@ border-radius: 100%;
 
 /***************************
 ****************************
-          SLIDES 
+      STUDENT SLIDES 
 ****************************
 ***************************/
 .slides-container{
@@ -33,17 +33,8 @@ border-radius: 100%;
 
 .student-spotlight-image {
 background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 80%, black 100%, rgba(0, 0, 0, 0.65) 100%), url('https://scontent.cdninstagram.com/t51.2885-15/e35/15876040_255712054859476_4055350641059430400_n.jpg');
-// background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, black 100%, rgba(0, 0, 0, 0.65) 100%), url('{{slide.studentImage}}');
 background-size: cover;
 }
-
-// .student-spotlight-container {
-//   background: url("https://scontent.cdninstagram.com/t51.2885-15/e35/15876040_255712054859476_4055350641059430400_n.jpg");
-//   background-size: cover;
-//   height: 70%;
-//   padding-left: 3%;
-//   vertical-align: text-bottom;
-// }
 
 .slide-zoom {
 height: 100%;
