--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -11,14 +11,57 @@ ion-app.md [padding], ion-app.md [padding] .scroll-content{
 }
 
 .article-image{
-position: relative;
+ position: relative;
  width: 100%;
  height: 50%;
+ padding-bottom: 2%;
+}
+
+.article-logo{
+    position: relative;
+    left: 45%;
+    height: 7%;
+    width: 10%;
 }
 
 .article-heading{
+    position: relative;
+    text-align: center;
 
 }
+
+.content-md hr{
+    background-color: #9E9E9E;
+    display: block;
+    padding: 1px;
+    width: 10%;
+    align: center;
+}
+
 .article-paragraph{
+    padding-left: 5%;
+    padding-right: 5%;
+
+}
+
+.article-company{
+    padding-top: -1px;
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+
+}
+
+.article-author{
+    color: #626262;
+    position: relative;
+    text-align: center;
+}
+
+.article-paragraph{
+      letter-spacing: 0.0325em;
+      color: black;
+    line-height: 150%;
+
 
 }
